added career objective

--- a/vishnukumar_resume.tex
+++ b/vishnukumar_resume.tex
@@ -11,4 +11,7 @@
 \photo[64pt][0pt]{picture}                    
 \begin{document}
 \makecvtitle
+\section{Career Objective}
+\cvitem{}{To pursue a highly rewarding career, seeking for a job in challenging and healthy work environment where I can utilize my skills and knowledge efficiently for organizational growth and at the same time be able to develop new skills
+}
 \end{document}
