--- a/vishnukumar_resume.tex
+++ b/vishnukumar_resume.tex
@@ -14,4 +14,18 @@
 \section{Career Objective}
 \cvitem{}{To pursue a highly rewarding career, seeking for a job in challenging and healthy work environment where I can utilize my skills and knowledge efficiently for organizational growth and at the same time be able to develop new skills
 }
+\section{Education}
+\begin{tabu} to 1.0\textwidth { | X[c] | X[c] | X[c] | X[c] |}
+ \hline
+ Year & Degree & Institution  & Grade\\
+ \hline
+ Present  & B. Tech. (ME)  & PES University & 8.3/10 \\
+ &   &  & (upto sem V) \\
+\hline 
+ 2014 & 12\textsuperscript{th} & Deeksha Centre For Learning Pre-University College (Dept. of PUE, Karnataka), Bangalore & 89.5 \% \\
+\hline
+2012 & 10\textsuperscript{th} & Vidaynikethan Public School (CBSE), Bangalore & 8.6\\
+\hline
+\end{tabu}
+\cvitem{}{}
 \end{document}
