--- a/vishnukumar_resume.tex
+++ b/vishnukumar_resume.tex
@@ -11,9 +11,11 @@
 \photo[64pt][0pt]{picture}                    
 \begin{document}
 \makecvtitle
+
 \section{Career Objective}
 \cvitem{}{To pursue a highly rewarding career, seeking for a job in challenging and healthy work environment where I can utilize my skills and knowledge efficiently for organizational growth and at the same time be able to develop new skills
 }
+
 \section{Education}
 \begin{tabu} to 1.0\textwidth { | X[c] | X[c] | X[c] | X[c] |}
  \hline
@@ -28,4 +30,16 @@
 \hline
 \end{tabu}
 \cvitem{}{}
+
+\section{Projects}
+\cvitem{}{
+  \begin{enumerate}
+  \item Hazardous Waste Disposal Management using Firebird-V (eYantra 2015-16)
+  \item Autonomous Explorer Robot (eYantra 2016-17)
+  \item Inverted Pendulum - Balancing of a metal rod using high torque DC motor. 
+  \item Motorcycle Quickshifter - Makes it possible to up-shift gears without holding the clutch or releasing the throttle.
+  \item Ping Pong Ball Shooter - autonomous ball shooter that projects the ball into a hoop present in front of it.
+\end{enumerate}
+}
+
 \end{document}
