--- a/vishnukumar_resume.tex
+++ b/vishnukumar_resume.tex
@@ -42,4 +42,13 @@
 \end{enumerate}
 }
 
+\section{Training}
+\cvitem{}{
+\begin{itemize}
+    \item 2 week Workshop on Embedded Systems by John Cole, UT Dallas;
+    \item Robotics Workshop conducted by NRC India;
+    \item TEQIP-II sponsored Workshop on Image Processing and Pattern Recognition using Scillab (Dec '16), Dept. of ECE, PES University, Bangalore;\newline{}
+    \end{itemize}
+}
+
 \end{document}
