--- a/vishnukumar_resume.tex
+++ b/vishnukumar_resume.tex
@@ -51,4 +51,14 @@
     \end{itemize}
 }
 
+\section{Achivements}
+\cvitem{}{
+  \begin{enumerate}
+  \item Received the Prof. CNR Rao Merit Scholarship ofr top 20\% Students (PES University) 
+  \item Winners, eYRC(2016) conducted by e-Yantra,IIT Bombay 
+  \item 3rd Runner-up, eYRC(2015) conducted by e-Yantra,IIT Bombay
+  \item Finalists, National Robotics Competition(2014-15) conducted by ARK Tech-nosolutions, Mumbai \& RoboKart.com
+\end{enumerate}
+}
+
 \end{document}
