added technical skills

--- a/vishnukumar_resume.tex
+++ b/vishnukumar_resume.tex
@@ -61,4 +61,32 @@
 \end{enumerate}
 }
 
+\section{Technical Skills}
+
+\subsection{Programming Languages}
+\cvitem{}{
+\begin{itemize}
+ \item c
+ \item Java
+ \item Python
+\end{itemize}
+}
+\subsection{Software}
+\cvitem{}{
+\begin{itemize}
+ \item Solid Edge 2D Drafting
+ \item SOLIDWORKS 3D CAD
+ \item ANSYS
+ \item CNCTRAIN - CNC Simulation 
+\end{itemize}
+}
+
+\subsection{Others}
+\cvitem{}{
+\begin{itemize}
+ \item Arduino 
+ \item Word/Excel/PowerPoint
+\end{itemize}
+}
+
 \end{document}
