added soft skills

--- a/vishnukumar_resume.tex
+++ b/vishnukumar_resume.tex
@@ -89,4 +89,25 @@
 \end{itemize}
 }
 
+\section{Soft Skills}
+\cvitem{}{
+  \begin{enumerate}
+  \item Communicative skills: 
+    \begin{itemize}
+    \item English
+    \item Hindi
+    \item Kannada - Native Language
+    \item German - Basic (Reading/Writing)
+    \end{itemize}       
+  \item Time Management
+  \item Deal with Difficult People
+  \item Friendly and reachable
+  \item Team Player 
+  \item Willingness to Learn
+  \item Work Well Under Pressure
+  \item Street-Smart 
+\end{enumerate}
+}
+
 \end{document}
+
