added extra-cirricular activities

--- a/vishnukumar_resume.tex
+++ b/vishnukumar_resume.tex
@@ -109,5 +109,14 @@
 \end{enumerate}
 }
 
+\section{Extra-Curricular Activities}
+\cvitem{}{
+\begin{itemize}
+ \item Centre head of a shelter home under Igniting Young Minds Initiative by Leaders for Tomorrow  
+ \item Football and Swimming
+ \item Travel 
+ \item Riding motorcycles
+\end{itemize}
+}
 \end{document}
 
