added personal details

--- a/vishnukumar_resume.tex
+++ b/vishnukumar_resume.tex
@@ -128,6 +128,14 @@
 \end{enumerate}
 }
 
+\section{Personal Details}
+\cvitem{}{Father's Name: ~ Vijaya Bhaskar Reddy P} 
+\cvitem{}{Mother's Name:  ~~Vasantha V S}
+\cvitem{}{sex: ~~~~~~~~~~~~~~~~~~Male} 
+\cvitem{}{Date of Birth: ~~~ 15 november 1996}
+\cvitem{}{Nationality: ~~~~~~~~Indian}
+
+
 
 
 \end{document}
