--- a/vishnukumar_resume.tex
+++ b/vishnukumar_resume.tex
@@ -135,6 +135,18 @@
 \cvitem{}{Date of Birth: ~~~ 15 november 1996}
 \cvitem{}{Nationality: ~~~~~~~~Indian}
 
+\section{References}
+\cvdoubleitem{}{
+\textbf{Dr. V. Krishna}
+{\newline{} Chairperson \newline{} Dept. of ME \newline{}PES University\newline{}Bangalore\newline{} Email: vkrishna@pes.edu }
+}{}{
+\textbf{Mr. Jyothi Prakash K H}
+{\newline{} asst. Professor \newline{} Dept. of ME \newline{}PES University\newline{}Bangalore\newline{} Email: jyothiprakash@pes.edu \newline{}}
+}
+\cvitem{}{
+\textbf{Mr. Divakara Reddy A}
+{\newline{} asst. Professor \newline{} Dept. of ME \newline{}PES University\newline{}Bangalore\newline{} Email: Reddy.divakara@gmail.com }
+}
 
 
 
