--- a/vishnukumar_resume.tex
+++ b/vishnukumar_resume.tex
@@ -148,6 +148,8 @@
 {\newline{} asst. Professor \newline{} Dept. of ME \newline{}PES University\newline{}Bangalore\newline{} Email: Reddy.divakara@gmail.com }
 }
 
+\section{Declaration}
+\cvitem{}{I hereby declare that the above cited information is true to the best of my knowledge and belief.}
 
 
 \end{document}
