--- a/vishnukumar_resume.tex
+++ b/vishnukumar_resume.tex
@@ -151,6 +151,7 @@
 \section{Declaration}
 \cvitem{}{I hereby declare that the above cited information is true to the best of my knowledge and belief.}
 
-
+\section{Date}
+\cvitem{}{24 april 2017}
 \end{document}
 
